swapped video for gradient background, updated fonts, working on line-up section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ Last Updated September 21, 2016
           <!-- fonts go here -->
           <link rel="stylesheet" type="text/css" href="style/MyFontsWebfontsKit.css">
           <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+          <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 
           <meta charset="utf-8">
           <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -32,7 +33,6 @@ Last Updated September 21, 2016
 
           <!-- stylesheets used -->
           <link rel="stylesheet" href="style/all.css">
-          <link href="webfonts/ss-social-circle.css" rel="stylesheet" /><!-- icon set https://symbolset.com/ -->
 
           <script src="js/vendor/modernizr-2.8.3.min.js"></script>
       </head>
@@ -42,35 +42,38 @@ Last Updated September 21, 2016
 <body>
 
   <!-- ======================   HEADER   =========================== -->
-    <div id="header" class="row"><!-- hero wrapper -->
+    <div id="header"><!-- hero wrapper -->
+        <div class="row">
 
-          <div class="row column nav-bar"><!-- NAV container -->
+                  <div class="row column nav-bar"><!-- NAV container -->
 
-            <!-- small 1/12(12), medium, large 1/9(12) -->
-                  <div class="logo"></div>
+                    <!-- small 1/12(12), medium, large 1/9(12) -->
+                          <div class="logo">
+                                <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 348.98 349.66"><defs><style>.cls-1,.cls-2,.cls-3,.cls-4,.cls-5,.cls-6,.cls-7{fill:none;stroke-miterlimit:10;stroke-width:3px;}.cls-1{stroke:url(#linear-gradient);}.cls-2{stroke:url(#linear-gradient-2);}.cls-3{stroke:url(#linear-gradient-3);}.cls-4{stroke:url(#linear-gradient-4);}.cls-5{stroke:url(#linear-gradient-5);}.cls-6{stroke:url(#linear-gradient-6);}.cls-7{stroke:url(#linear-gradient-7);}</style><linearGradient id="linear-gradient" x1="174.49" y1="173.83" x2="174.49" y2="142.83" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#662d91"/><stop offset="1" stop-color="#ed1c24"/></linearGradient><linearGradient id="linear-gradient-2" x1="174.49" y1="209.83" x2="174.49" y2="180.83" xlink:href="#linear-gradient"/><linearGradient id="linear-gradient-3" x1="174.49" y1="313.83" x2="174.49" y2="294.83" xlink:href="#linear-gradient"/><linearGradient id="linear-gradient-4" x1="174.49" y1="349.66" x2="174.49" y2="330.83" xlink:href="#linear-gradient"/><linearGradient id="linear-gradient-5" x1="174.49" y1="279.83" x2="174.49" y2="257.83" xlink:href="#linear-gradient"/><linearGradient id="linear-gradient-6" x1="174.49" y1="137.83" x2="174.49" y2="0" xlink:href="#linear-gradient"/><linearGradient id="linear-gradient-7" x1="174.49" y1="244.83" x2="174.49" y2="218.83" xlink:href="#linear-gradient"/></defs><title>outrunners</title><path class="cls-1" d="M1.52,172.33H347.46a182.88,182.88,0,0,0-2.6-28H4.12A182.88,182.88,0,0,0,1.52,172.33Z"/><path class="cls-2" d="M344.24,208.33a164.3,164.3,0,0,0,3.08-26H1.66a164.3,164.3,0,0,0,3.08,26Z"/><path class="cls-3" d="M51.36,296.33a155.36,155.36,0,0,0,17.72,16H279.9a155.36,155.36,0,0,0,17.72-16Z"/><path class="cls-4" d="M102.12,332.33a173.34,173.34,0,0,0,144.73,0Z"/><path class="cls-5" d="M23.51,259.33a140.3,140.3,0,0,0,12.34,19H313.12a140.3,140.3,0,0,0,12.34-19Z"/><path class="cls-6" d="M343.26,136.33C325.87,59.33,256.92,1.5,174.49,1.5S23.11,59.33,5.73,136.33Z"/><path class="cls-7" d="M7.55,220.33a149.93,149.93,0,0,0,8,23H333.38a149.93,149.93,0,0,0,8-23Z"/></svg>
+                          </div>
 
-                  <div class="menu"><!-- bit-3 = 25% -->
-                    <div class="menu-mobile"><a id="hamburger" href="#"><span></span></a></div>
-                      <ul>
-                        <li><a href="#">News &amp; Media</a></li>
-                        <li><a href="#">Artists</a></li>
-                        <li><a href="#">Festival Info</a></li>
-                        <li><a href="#">Connect</a></li>
-                      </ul>
-                  </div>
+                          <div class="menu"><!-- bit-3 = 25% -->
+                            <div class="menu-mobile"><a id="hamburger" href="#"><span></span></a></div>
+                              <ul>
+                                <li><a href="#">News &amp; Media</a></li>
+                                <li><a href="#">Artists</a></li>
+                                <li><a href="#">Festival Info</a></li>
+                                <li><a href="#">Connect</a></li>
+                              </ul>
+                          </div>
 
-          </div><!-- close nav tag -->
+                  </div><!-- close nav tag -->
 
-          <div class="row column display-text">
+                  <div class="row column display-text">
 
-                  <h1>The Outrunners</h1>
-                  <h4>The World's First Synthwave Music Festival</h4>
+                          <h1>The Outrunners</h1>
+                          <h4>The World's First Synthwave Music Festival</h4>
 
-                  <div class="btn bit-3"><h5>Buy Tickets</h5></div>
+                          <div class="btn bit-3"><h5>Buy Tickets</h5></div>
 
-                  <div class="social-media-svg"></div>
-          </div><!-- close display-text-->
-
+                          <div class="social-media-svg"></div>
+                  </div><!-- close display-text-->
+        </div>
     </div><!-- close hero section tag -->
 
 
@@ -199,25 +202,31 @@ Last Updated September 21, 2016
         <div id="line-up" class="row"><!-- line-up container -->
           <!-- TODO prefer img vs css background-img ? -->
 
-                <div class="bit-1-3-3 aspect h-m84">Miami Nights 1984</div>
-                <div class="bit-1-3-3 aspect h-out">The Outrunners</div>
-                <div class="bit-1-3-3 aspect h-kaz">Kazinsky</div>
+              <!-- TODO add div class="content" to svg designs -->
+                <div class="bit-1-2-2 aspect  h-m84">
+                  <div class="content h-m84">
+                        <a href="#"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 227.33 241.65"><defs><style>.cls-1{fill:#f0f;}</style></defs><title>MN84</title><g id="MN84"><polygon class="cls-1" points="198.28 6.67 189.55 6.67 176.58 6.67 143.67 6.67 143.67 40.35 143.67 157.67 176.67 157.67 176.67 40.67 189.67 40.67 189.67 157.67 223.67 157.67 223.67 40.35 223.67 31.73 198.28 6.67"/>
+                                    <polygon class="cls-1" points="96.58 6.67 83.61 6.67 50.09 6.67 37.12 6.67 30.73 6.67 3.67 34.4 3.67 40.35 3.67 157.67 37.67 157.67 37.67 40.67 50.67 40.67 50.67 157.67 83.67 157.67 83.67 40.67 96.67 40.67 96.67 157.67 130.67 157.67 130.67 40.35 130.67 6.67 96.58 6.67"/>
+                                    <path class="cls-1" d="M62.4,229.16c-1-12.56,9.86-18.08,21.44-22.18-2.44-2.88-4.4-6-4.72-10.06-1-13.17,13.34-22.16,23.59-23,3.17-.25,8,.11,8.29,4,.13,1.59-.61,3.12-1.59,3.19s-2-.46-3.34-.35c-6.1.48-14.83,4.85-14.24,12.41.25,3.17,2.2,6.08,4.74,8.71,10.55-4.64,19.38-11,18.34-24.15-.33-4.15-1-6.67-1.11-7.89a1.64,1.64,0,0,1,1.7-1.85c4.27-.34,6.74,7.69,7.18,13.18,1.09,13.78-7.89,21.24-20.91,25.82,3.47,3.53,6.59,7.33,7,12.09,1,12.8-14.26,21.37-26.33,22.45C73.74,242.25,63.16,238.91,62.4,229.16Zm26.22-17.65c-8,3-14.08,6.63-13.43,14.8.43,5.49,4.24,8.62,10.21,8.15,5.61-.44,11.33-5.68,10.83-12C95.9,218.29,92.32,215,88.61,211.51Z"/>
+                                    <path class="cls-1" d="M158.74,189c2.93-.23,8.24,3.4,8.47,6.2.07.85-.28,1.13-1,2.78-1.27,2.55-2.31,5-3.22,7.37,2.66-.46,5.22-.78,7.53-1,2-.15,2.75.64,2.84,1.74.13,1.71-1.5,4.29-2.71,4.51L160,212.74c-2.32,6.32-4.27,12.73-7,20.55-.71,1.9-1.62,2.83-2.59,2.9-2.56.2-5.69-5.2-6-8.73a6.16,6.16,0,0,1,.12-1.61c.73-3.13,1.81-6.65,2.88-10.17-5.54,1.3-11.07,2.84-15.73,4.43a6,6,0,0,1-1.45.24c-4,.32-9.55-2.8-9.85-6.71a4.38,4.38,0,0,1,.75-2.88,258.33,258.33,0,0,1,39.39-48.14A2.14,2.14,0,0,1,162,162c2.68-.21,6.77,3.39,7,6a2,2,0,0,1-.61,1.64c-12.91,12.06-25.64,26.44-35.68,42.33,5.76-1.68,11.78-3.14,17.57-4.33,2.3-6.56,4.75-12.89,6.83-17.6A1.85,1.85,0,0,1,158.74,189Z"/>
+                                  </g></svg>
+                        </a>
+                  </div>
+                </div>
 
-                <div class="bit-2-4-6 aspect h-lzh">LazerHawk</div>
-                <div class="bit-2-4-6 aspect h-cts">Com Truise</div>
-                <div class="bit-2-4-6 aspect h-col">College</div>
+                <div class="bit-1-2-2 aspect h-out">
+                    <div class="content">
+                        <a href="#">The Outrunners</a>
+                    </div>
+                </div>
 
-                <div class="bit-2-4-6 aspect h-dyn">Dynatron</div>
-                <div class="bit-2-4-6 aspect h-ats">A-tease</div>
-                <div class="bit-2-4-6 aspect h-btm">Betamaxx</div>
+                <div class="bit-2-3-3 aspect h-lzh">LazerHawk</div>
+                <div class="bit-2-3-3 aspect h-cts">Com Truise</div>
+                <div class="bit-2-3-3 aspect h-col">College</div>
 
-                <div class="bit-2-4-6 aspect h-mdr">MegaDrive</div>
-                <div class="bit-2-4-6 aspect h-mid">The Midnight</div>
-                <div class="bit-2-4-6 aspect h-gun">Gunship</div>
-
-                <div class="bit-2-4-6 aspect h-f84">FM-84</div>
-                <div class="bit-2-4-6 aspect h-cbr">Carpenter Brut</div>
-                <div class="bit-2-4-6 aspect h-fls">Flashworx</div>
+                <div class="bit-2-3-3 aspect h-dyn">Dynatron</div>
+                <div class="bit-2-3-3 aspect h-gun">Gunship</div>
+                <div class="bit-2-3-3 aspect h-mid">The Midnight</div>
 
         </div><!-- close line-up container -->
 
@@ -240,13 +249,13 @@ Last Updated September 21, 2016
   <!-- ======================   Festival Info  =========================== -->
 
 <div id="info" class="row">
-      <h2>Festival Info</h2>
+      <h2 class="column">Festival Info</h2>
 
-      <div class="bit-1-2L-2L">
+      <div class="column bit-1-2L-2L">
             <h3>Enter the World of Synthwave</h3>
       </div>
 
-      <div class="bit-1-2R-2R">
+      <div class="column bit-1-2R-2R">
             <p>For newcomers, Synth wave is a style of music that fits into the neon-noir
               style that came out of the 1980’s and has seen a revival as of late through
               various forms of media.  The Outrunners music festival celebrates this culture,
@@ -258,12 +267,7 @@ Last Updated September 21, 2016
 
 </div>
 
-<div id="location" class="row">
-    <h3>Location</h3>
-
-
-</div>
-
+<div id="location" class="row column"><h3>Location</h3></div>
 
 <div id="map"></div><!-- google map div -->
 
@@ -362,23 +366,29 @@ Last Updated September 21, 2016
           <div class="bit-8-6 logo-foot"></div>
     </div>
 
-    <div class="column flex"><h3>Partners</h3></div>
 
-    <div class="column bit-2 spacer"><div class="square-ratio"><div class="content"><img src="../synthwave/img/sponsors/test-1.jpg" alt="sponsor" /></div></div></div>
-    <div class="column bit-2 spacer"><div class="square-ratio"><div class="content"><img src="../synthwave/img/sponsors/test-2.jpg" alt="sponsor" /></div></div></div>
-    <div class="column bit-2 spacer"><div class="square-ratio"><div class="content"><img src="../synthwave/img/sponsors/test-3.jpg" alt="sponsor" /></div></div></div>
-    <div class="column bit-2 spacer"><div class="square-ratio"><div class="content"><img src="../synthwave/img/sponsors/test-4.jpg" alt="sponsor" /></div></div></div>
-    <div class="column bit-2 spacer"><div class="square-ratio"><div class="content"><img src="../synthwave/img/sponsors/test-5.jpg" alt="sponsor" /></div></div></div>
-    <div class="column bit-2 spacer"><div class="square-ratio"><div class="content"><img src="../synthwave/img/sponsors/test-6.jpg" alt="sponsor" /></div></div></div>
-
+    <!-- social media icons -->
     <div class="column flex spacer">
-          <div class="bit-8-6"><!-- TODO either ditch symbolset or figure how to scale .. -->
-              <div class="bit-3 ss-twitter"></div>
-              <div class="bit-3 ss-facebook"></div>
-              <div class="bit-3 ss-instagram"></div>
-              <div class="bit-3 ss-youtube"></div>
+              <div class="column bit-2 social-icons"><!-- twitter -->
+                  <a href="#"><svg xmlns="http://www.w3.org/2000/svg" stroke="magenta" fill="magenta" viewBox="0 0 430.1 430.1"><path d="M381.4 198.6c24.2-2 40.5-13 46.8-27.9 -8.7 5.4-35.8 11.2-50.7 5.6 -0.7-3.5-1.5-6.8-2.4-9.9 -11.4-41.8-50.4-75.5-91.2-71.4 3.3-1.3 6.7-2.6 10-3.7 4.5-1.6 30.9-5.9 26.7-15.2 -3.5-8.2-35.7 6.2-41.8 8.1 8-3 21.3-8.2 22.7-17.4 -12.3 1.7-24.3 7.5-33.6 15.9 3.4-3.6 5.9-8 6.5-12.8C241.7 91 222.6 133.1 207.1 174c-12.1-11.8-22.9-21-32.6-26.2 -27.1-14.5-59.5-29.7-110.4-48.6 -1.6 16.8 8.3 39.2 36.8 54.1 -6.2-0.8-17.5 1-26.5 3.2 3.7 19.3 15.7 35.2 48.2 42.8 -14.8 1-22.5 4.4-29.5 11.6 6.8 13.4 23.3 29.2 53 25.9 -33 14.2-13.5 40.6 13.4 36.6C113.7 320.9 41.5 317.4 0 277.8c108.3 147.6 343.7 87.3 378.8-54.9 26.3 0.2 41.7-9.1 51.3-19.4C415 206.1 393 203.5 381.4 198.6z"/></svg></a>
+              </div>
 
-          </div>
+              <div class="column bit-2 social-icons"><!-- facebook -->
+                <!-- source http://www.flaticon.com/search?word=instagram&search-type=icons -->
+                      <a href="#"><svg xmlns="http://www.w3.org/2000/svg"  stroke="magenta" fill="magenta" viewBox="0 0 90 90"><path d="M90 15C90 7.1 82.9 0 75 0H15C7.1 0 0 7.1 0 15v60C0 82.9 7.1 90 15 90H45V56H34V41h11v-5.8C45 25.1 52.6 16 61.9 16H74v15H61.9C60.5 31 59 32.6 59 35V41h15v15H59v34h16c7.9 0 15-7.1 15-15V15z"/></svg></a>
+              </div>
+
+              <div class="column bit-2 social-icons"><!-- youtube -->
+                      <a href="#"><svg xmlns="http://www.w3.org/2000/svg"  stroke="magenta" fill="magenta" viewBox="0 0 90 90"><path d="M90 27C90 19.5 84 13.5 76.6 13.5h-63.1C6 13.5 0 19.5 0 27v36.1C0 70.5 6 76.5 13.5 76.5h63.1C84 76.5 90 70.5 90 63V27zM36 60.2V26.3l25.7 16.9L36 60.2z"/></svg></a>
+              </div>
+
+              <div class="column bit-2 social-icons"><!-- soundcloud -->
+                      <a href="#"><svg xmlns="http://www.w3.org/2000/svg"  stroke="magenta" fill="magenta" viewBox="0 0 90 90"><path d="M0 54c0 3 1.4 5.8 3.6 7.6V46.4C1.4 48.3 0 51 0 54M7.3 44.4v19.2C8.2 63.9 9.2 64 10.1 64h1V44.1c-0.3 0-0.6 0-1 0C9.2 44 8.2 44.2 7.3 44.4M15.7 45.7c-0.3-0.2-0.5-0.3-0.8-0.5V64h3.8V38.9C17.2 40.8 16.1 43.2 15.7 45.7M22.4 35.3V64h3.8V33.5C24.9 33.9 23.6 34.6 22.4 35.3M30 32.7V64h3.8V32.8c-0.8-0.1-1.6-0.2-2.4-0.2C30.9 32.7 30.4 32.7 30 32.7M39.6 34.9c-1.2-0.7-2.6-1.3-4-1.7V64h5.7V32.6C40.7 33.4 40.1 34.1 39.6 34.9M43.2 30.8V64h35.9v0C86.6 63.5 90 58.8 90 53.1c0-6-4.6-10.9-10.7-10.9 -1.6 0-2.9 0.3-4.2 0.9C74.1 33.5 65.9 26 55.9 26 51 26 46.6 27.8 43.2 30.8"/></svg></a>
+              </div>
+
+              <div class="column bit-2 social-icons"><!-- instagram -->
+                      <a href="#"><svg xmlns="http://www.w3.org/2000/svg"  stroke="magenta" fill="magenta" viewBox="0 0 169.1 169.1"><path d="M122.4 0H46.7C20.9 0 0 20.9 0 46.7v75.8c0 25.7 20.9 46.7 46.7 46.7h75.8c25.7 0 46.7-20.9 46.7-46.7V46.7C169.1 20.9 148.1 0 122.4 0zM154.1 122.4c0 17.5-14.2 31.7-31.7 31.7H46.7C29.2 154.1 15 139.9 15 122.4V46.7C15 29.2 29.2 15 46.7 15h75.8c17.5 0 31.7 14.2 31.7 31.7V122.4z"/><path d="M84.5 41c-24 0-43.6 19.5-43.6 43.6 0 24 19.5 43.6 43.6 43.6s43.6-19.5 43.6-43.6C128.1 60.5 108.6 41 84.5 41zM84.5 113.1c-15.7 0-28.6-12.8-28.6-28.6 0-15.7 12.8-28.6 28.6-28.6s28.6 12.8 28.6 28.6C113.1 100.3 100.3 113.1 84.5 113.1z"/><path d="M129.9 28.3c-2.9 0-5.7 1.2-7.8 3.2 -2.1 2-3.2 4.9-3.2 7.8 0 2.9 1.2 5.7 3.2 7.8 2 2 4.9 3.2 7.8 3.2 2.9 0 5.7-1.2 7.8-3.2 2.1-2 3.2-4.9 3.2-7.8 0-2.9-1.2-5.7-3.2-7.8C135.7 29.4 132.8 28.3 129.9 28.3z"/></svg></a>
+              </div>
     </div>
 
     <div class="column flex spacer">
@@ -397,6 +407,7 @@ Last Updated September 21, 2016
                 var miami = {lat: 25.777073, lng: -80.1896337};
                 var map = new google.maps.Map(document.getElementById('map'), {
                   zoom: 15,
+                  scrollwheel: 0,
                   center: miami
                 });
                 var marker = new google.maps.Marker({
