close to final version...

--- a/index.html
+++ b/index.html
@@ -50,98 +50,62 @@ Last Updated September 21, 2016
                     <!-- small 1/12(12), medium, large 1/9(12) -->
                           <div class="logo">
 
-                            <!-- the svg optimizer didn't work for this batch .. sorry ... -->
+                            <!-- the svg optimizer didn't work for this batch -->
 
                                     <?xml version="1.0" encoding="utf-8"?>
                                     <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
                                     <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                     	 viewBox="0 0 349 349.7" style="enable-background:new 0 0 349 349.7;" xml:space="preserve">
                                     <style type="text/css">
-                                    	.st0{fill:url(#SVGID_1_);}
-                                    	.st1{fill:url(#SVGID_2_);}
-                                    	.st2{fill:url(#SVGID_3_);}
-                                    	.st3{fill:url(#SVGID_4_);}
-                                    	.st4{fill:url(#SVGID_5_);}
-                                    	.st5{fill:url(#SVGID_6_);}
-                                    	.st6{fill:url(#SVGID_7_);}
-                                    	.st7{fill:#FF00FF;}
-                                    	.st8{fill:#FF00FF;stroke:#FF00FF;stroke-miterlimit:10;}
-                                    	.st9{display:none;}
+                                    	.st0{fill:url(#SVGID_1_);} .st1{fill:url(#SVGID_2_);} .st2{fill:url(#SVGID_3_);} .st3{fill:url(#SVGID_4_);} .st4{fill:url(#SVGID_5_);} .st5{fill:url(#SVGID_6_);} .st6{fill:url(#SVGID_7_);} .st7{fill:#FF00FF;}
+                                      .st8{fill:#FF00FF;stroke:#FF00FF;stroke-miterlimit:10;} .st9{display:none;}
                                     </style>
 
                                     <g id="Layer_1">
                                     	<g>
-                                    		<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="1.5225" y1="158.8269" x2="347.4591" y2="158.8269">
-                                    			<stop  offset="0" style="stop-color:#F15A24"/>
-                                    			<stop  offset="1" style="stop-color:#FCEE21"/>
-                                    		</linearGradient>
+                                    		<linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="1.5225" y1="158.8269" x2="347.4591" y2="158.8269"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
                                     		<path class="st0" d="M344.9,144.8H4.1c-1.6,9-2.5,19-2.6,28h345.9C347.3,163.8,346.4,153.8,344.9,144.8z"/>
-                                    		<linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="1.6625" y1="195.8269" x2="347.3191" y2="195.8269">
-                                    			<stop  offset="0" style="stop-color:#F15A24"/>
-                                    			<stop  offset="1" style="stop-color:#FCEE21"/>
-                                    		</linearGradient>
-
+                                    		<linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="1.6625" y1="195.8269" x2="347.3191" y2="195.8269"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
                                     		<path class="st1" d="M4.7,208.8h339.5c1.7-8,2.7-17,3.1-26H1.7C2,191.8,3.1,200.8,4.7,208.8z"/>
-                                    		<linearGradient id="SVGID_3_" gradientUnits="userSpaceOnUse" x1="51.3592" y1="304.8269" x2="297.6224" y2="304.8269">
-                                    			<stop  offset="0" style="stop-color:#F15A24"/>
-                                    			<stop  offset="1" style="stop-color:#FCEE21"/>
-                                    		</linearGradient>
-
+                                    		<linearGradient id="SVGID_3_" gradientUnits="userSpaceOnUse" x1="51.3592" y1="304.8269" x2="297.6224" y2="304.8269"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
                                     		<path class="st2" d="M69.1,312.8h210.8c6.3-5,12.2-10,17.7-16H51.4C56.9,302.8,62.8,307.8,69.1,312.8z"/>
-                                    		<linearGradient id="SVGID_4_" gradientUnits="userSpaceOnUse" x1="102.125" y1="340.7412" x2="246.8566" y2="340.7412">
-                                    			<stop  offset="0" style="stop-color:#F15A24"/>
-                                    			<stop  offset="1" style="stop-color:#FCEE21"/>
-                                    		</linearGradient>
-
+                                    		<linearGradient id="SVGID_4_" gradientUnits="userSpaceOnUse" x1="102.125" y1="340.7412" x2="246.8566" y2="340.7412"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
                                     		<path class="st3" d="M174.5,348.7c25.8,0,50.3-5.8,72.4-15.8H102.1C124.1,342.8,148.7,348.7,174.5,348.7z"/>
-                                    		<linearGradient id="SVGID_5_" gradientUnits="userSpaceOnUse" x1="23.5147" y1="269.3269" x2="325.4669" y2="269.3269">
-                                    			<stop  offset="0" style="stop-color:#F15A24"/>
-                                    			<stop  offset="1" style="stop-color:#FCEE21"/>
-                                    		</linearGradient>
-
+                                    		<linearGradient id="SVGID_5_" gradientUnits="userSpaceOnUse" x1="23.5147" y1="269.3269" x2="325.4669" y2="269.3269"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
                                     		<path class="st4" d="M35.9,278.8h277.3c4.5-6,8.6-12,12.3-19h-302C27.2,266.8,31.3,272.8,35.9,278.8z"/>
-                                    		<linearGradient id="SVGID_6_" gradientUnits="userSpaceOnUse" x1="5.7256" y1="69.4135" x2="343.256" y2="69.4135">
-                                    			<stop  offset="0" style="stop-color:#F15A24"/>
-                                    			<stop  offset="1" style="stop-color:#FCEE21"/>
-                                    		</linearGradient>
-
+                                    		<linearGradient id="SVGID_6_" gradientUnits="userSpaceOnUse" x1="5.7256" y1="69.4135" x2="343.256" y2="69.4135"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
                                     		<path class="st5" d="M174.5,2C92.1,2,23.1,59.8,5.7,136.8h337.5C325.9,59.8,256.9,2,174.5,2z"/>
-                                    		<linearGradient id="SVGID_7_" gradientUnits="userSpaceOnUse" x1="7.5512" y1="232.3269" x2="341.4304" y2="232.3269">
-                                    			<stop  offset="0" style="stop-color:#F15A24"/>
-                                    			<stop  offset="1" style="stop-color:#FCEE21"/>
-                                    		</linearGradient>
-
+                                    		<linearGradient id="SVGID_7_" gradientUnits="userSpaceOnUse" x1="7.5512" y1="232.3269" x2="341.4304" y2="232.3269"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
                                     		<path class="st6" d="M15.6,243.8h317.8c3.2-7,5.9-15,8-23H7.6C9.7,228.8,12.4,236.8,15.6,243.8z"/>
                                     	</g>
                                     </g>
-                                    <g id="MN84">
-                                    </g>
-                                    <g id="Guides" class="st9">
-                                    </g>
+
                                     </svg>
-
-
 
                           </div>
 
                           <div class="menu"><!-- bit-3 = 25% -->
                             <div class="menu-mobile"><a id="hamburger" href="#"><span></span></a></div>
                               <ul>
-                                <li><a href="#">News &amp; Media</a></li>
-                                <li><a href="#">Artists</a></li>
-                                <li><a href="#">Festival Info</a></li>
-                                <li><a href="#">Connect</a></li>
+                                <li><a href="#news"><h3>News &amp; Media</h3></a></li>
+                                <li><a href="#line-up"><h3>Artists</h3></a></li>
+                                <li><a href="#info"><h3>Festival Info</h3></a></li>
+                                <li><a href="#connect"><h3>Connect</h3></a></li>
                               </ul>
                           </div>
 
                   </div><!-- close nav tag -->
 
+                <!-- HEADER TEXT -->
                   <div class="row column display-text">
 
                           <h1>The Outrunners</h1>
                           <h4>The World's First Synthwave Music Festival</h4>
 
-                          <div class="btn bit-3"><h5>Buy Tickets</h5></div>
+                          <div class="column btn-prop">
+                              <div class="btn bit-3"><h5>Buy Tickets</h5></div>
+                          </div>
+
 
                           <div class="social-media-svg"></div>
                   </div><!-- close display-text-->
@@ -186,13 +150,13 @@ Last Updated September 21, 2016
                       <div class="text">
                               <h3>Visual Artist of the Week</h3>
 
-                              <div class="limit">
+                              <div class="wrap-text">
                                     <p>James White is a Canadian graphic designer and illustrator, and his award winning
                                     studio SignalNoise has produced works for a variety of clients including Nike, MTV and Google.</p>
                               </div>
 
                               <div>
-                                      <div class="foot-link"><a href="http://signalnoise.com/" target="blank">SignalNoise.com</a></div>
+                                      <div class="foot-link"><a href="http://signalnoise.com/" target="blank">SignalNoise</a></div>
                                       <div class="foot-link right">20160917</div>
                               </div>
                       </div>
@@ -213,13 +177,13 @@ Last Updated September 21, 2016
                       <div class="text">
                             <h3>Simpsons + Steve Cutts</h3>
 
-                            <div class="limit">
+                            <div class="wrap-text">
                                   <p>See the Simpsons couch gag inspired by the synthwave genre that pits Homer as Joe 'Kaz' Kazinsky versus Ned
                                   Flanders as 'Fernando Whitmore' in LA-Z Rider, animated by Steve Cutts.</p>
                             </div>
 
                               <div>
-                                      <div class="foot-link"><a href="https://www.youtube.com/watch?v=kZu5iDTtNg0" target="blank">LA-Z Rider, YouTube</a></div>
+                                      <div class="foot-link"><a href="https://www.youtube.com/watch?v=kZu5iDTtNg0" target="blank">LA-Z Rider</a></div>
                                       <div class="foot-link right">20160901</div>
                               </div>
 
@@ -239,12 +203,12 @@ Last Updated September 21, 2016
 
                       <div class="text">
                           <h3>DRIVE Radio</h3>
-                          <div class="limit">
+                          <div class="wrap-text">
                                 <p>Get the Outrunners Festival Mobile App for artist stage times and line-ups, connect with staff and friends
                                 and contests now.</p>
                           </div>
                           <div >
-                                  <div class="foot-link"><a href="http://driveradio.be/" target="blank">DRIVE Radio</a></div>
+                                  <div class="foot-link"><a href="http://driveradio.be/" target="blank">DRIVE</a></div>
                                   <div class="foot-link right">20160826</div>
 
                           </div>
@@ -272,9 +236,9 @@ Last Updated September 21, 2016
   <!-- ======================   Line-up   =========================== -->
 
         <div id="line-up" class="row"><!-- line-up container -->
-          <!-- TODO prefer img vs css background-img ? -->
 
-              <!-- TODO add div class="content" to svg designs -->
+            <h2 class="column">Artist Line-up</h2>
+
                 <div class="bit-1-2-2 aspect">
                   <div class="content mount">
                         <a href="#">
@@ -459,7 +423,7 @@ Last Updated September 21, 2016
 
 </div>
 
-<div id="location" class="row column"><h3>Location</h3></div>
+<div id="location" class="row column"><h2>Location</h2></div>
 
 <div id="map"></div><!-- google map div -->
 
@@ -502,6 +466,7 @@ Last Updated September 21, 2016
           <div class="btn bit-3"><h5>Buy Tickets</h5></div>
     </div>
 </div>
+
 
 <!--
  ######   #######  ##    ## ##    ## ########  ######  ########
@@ -554,8 +519,38 @@ Last Updated September 21, 2016
   <!-- ======================  Footer    =========================== -->
 
 <footer class="row">
-    <div class="column flex spacer">
-          <div class="bit-8-6 logo-foot"></div>
+    <div class="column flex spacer"><!-- footer logo -->
+
+              <?xml version="1.0" encoding="utf-8"?>
+              <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 viewBox="0 0 349 349.7" style="enable-background:new 0 0 349 349.7;" xml:space="preserve">
+              <style type="text/css">
+                .st0{fill:url(#SVGID_1_);} .st1{fill:url(#SVGID_2_);} .st2{fill:url(#SVGID_3_);} .st3{fill:url(#SVGID_4_);} .st4{fill:url(#SVGID_5_);} .st5{fill:url(#SVGID_6_);} .st6{fill:url(#SVGID_7_);} .st7{fill:#FF00FF;}
+                .st8{fill:#FF00FF;stroke:#FF00FF;stroke-miterlimit:10;} .st9{display:none;}
+              </style>
+
+              <g id="Layer_1">
+                <g>
+                  <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="1.5225" y1="158.8269" x2="347.4591" y2="158.8269"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
+                  <path class="st0" d="M344.9,144.8H4.1c-1.6,9-2.5,19-2.6,28h345.9C347.3,163.8,346.4,153.8,344.9,144.8z"/>
+                  <linearGradient id="SVGID_2_" gradientUnits="userSpaceOnUse" x1="1.6625" y1="195.8269" x2="347.3191" y2="195.8269"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
+                  <path class="st1" d="M4.7,208.8h339.5c1.7-8,2.7-17,3.1-26H1.7C2,191.8,3.1,200.8,4.7,208.8z"/>
+                  <linearGradient id="SVGID_3_" gradientUnits="userSpaceOnUse" x1="51.3592" y1="304.8269" x2="297.6224" y2="304.8269"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
+                  <path class="st2" d="M69.1,312.8h210.8c6.3-5,12.2-10,17.7-16H51.4C56.9,302.8,62.8,307.8,69.1,312.8z"/>
+                  <linearGradient id="SVGID_4_" gradientUnits="userSpaceOnUse" x1="102.125" y1="340.7412" x2="246.8566" y2="340.7412"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
+                  <path class="st3" d="M174.5,348.7c25.8,0,50.3-5.8,72.4-15.8H102.1C124.1,342.8,148.7,348.7,174.5,348.7z"/>
+                  <linearGradient id="SVGID_5_" gradientUnits="userSpaceOnUse" x1="23.5147" y1="269.3269" x2="325.4669" y2="269.3269"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
+                  <path class="st4" d="M35.9,278.8h277.3c4.5-6,8.6-12,12.3-19h-302C27.2,266.8,31.3,272.8,35.9,278.8z"/>
+                  <linearGradient id="SVGID_6_" gradientUnits="userSpaceOnUse" x1="5.7256" y1="69.4135" x2="343.256" y2="69.4135"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
+                  <path class="st5" d="M174.5,2C92.1,2,23.1,59.8,5.7,136.8h337.5C325.9,59.8,256.9,2,174.5,2z"/>
+                  <linearGradient id="SVGID_7_" gradientUnits="userSpaceOnUse" x1="7.5512" y1="232.3269" x2="341.4304" y2="232.3269"><stop  offset="0" style="stop-color:#F15A24"/><stop  offset="1" style="stop-color:#FCEE21"/></linearGradient>
+                  <path class="st6" d="M15.6,243.8h317.8c3.2-7,5.9-15,8-23H7.6C9.7,228.8,12.4,236.8,15.6,243.8z"/>
+                </g>
+              </g>
+
+              </svg>
+
     </div>
 
 
